--- a/.prettierrc
+++ b/.prettierrc
@@ -1,12 +1,26 @@
 {
-    "semi": true,
-    "singleQuote": true,
-    "trailingComma": "es5",
-    "tabWidth": 4,
-    "useTabs": false,
-    "printWidth": 80,
-    "arrowParens": "avoid",
-    "bracketSpacing": true,
-    "jsxBracketSameLine": false
+	"semi": true,
+	"singleQuote": true,
+	"trailingComma": "es5",
+	"tabWidth": 4,
+	"useTabs": false,
+	"printWidth": 80,
+	"arrowParens": "avoid",
+	"bracketSpacing": true,
+	"jsxBracketSameLine": false,
+	"overrides": [
+	  {
+		"files": "*.ts",
+		"options": {
+		  "tabWidth": 4
+		}
+	  },
+	  {
+		"files": "*.tsx",
+		"options": {
+		  "tabWidth": 4
+		}
+	  }
+	]
   }
   
