--- a/package.json
+++ b/package.json
@@ -10,13 +10,10 @@
     "devDependencies": {
         "@typescript-eslint/eslint-plugin": "^8.9.0",
         "@typescript-eslint/parser": "^8.9.0",
-        "autoprefixer": "^10.4.20",
         "eslint": "^9.12.0",
         "eslint-plugin-react": "^7.37.1",
         "eslint-plugin-vue": "^9.29.0",
         "lerna": "^8.1.8",
-        "postcss": "^8.4.47",
-        "prettier": "^3.3.3",
-        "tailwindcss": "^3.4.14"
+        "prettier": "^3.3.3"
     }
 }
