--- a/packages/react-typescript-library/package.json
+++ b/packages/react-typescript-library/package.json
@@ -9,6 +9,11 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.6.0",
+    "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
+    "@fortawesome/free-solid-svg-icons": "^6.6.0",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@types/storybook__react": "^5.2.1",
     "classnames": "^2.5.1",
     "react": "^18.3.1",
